prevent horizontal scrolling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
 
+html {
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
 }
