--- a/client/src/styling/countdown.css
+++ b/client/src/styling/countdown.css
@@ -1,10 +1,9 @@
 .Countdown {
-  position: absolute;
-  display: block;
-  float: left;
+  float: right;
   font-family: 'Julius Sans One', sans-serif;
-  font-size: 1vw;
-  margin-top: 10px;
+/*  font-size: 1vw;
+*/  margin-top: 10px;
+  width: 35%;
 }
 
 .Countdown-col{
@@ -16,7 +15,7 @@
   margin: 0 5px;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 800px) {
   .Countdown {
     display: none;
   }
