--- a/client/src/styling/sideimage.css
+++ b/client/src/styling/sideimage.css
@@ -13,6 +13,7 @@
   .sideimage {
     position: absolute;
     display: block;
+    overflow-x: hidden;
     min-width: 200%;
     top: 0%;
     left: -45%;
@@ -23,6 +24,7 @@
 @media screen and (max-width: 450px) {
   .sideimage {
     position: absolute;
+    overflow-x: hidden;
     display: block;
     background-size: cover;
     min-width: 200%;
